example/secondfile/objects/Notifications__c.object
<CustomObject>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>CreateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CreateDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Validation</fullName>
        <active>true</active>
        <description>Description  Can&apos;t be Empty</description>
        <errorConditionFormula>Description__c   =  &apos;&apos;</errorConditionFormula>
        <errorMessage>Description  can&apos;t be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Validation</fullName>
        <active>true</active>
        <description>End Date can&apos;t be less than Start Date</description>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>End date can&apos;t be before the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Validation</fullName>
        <active>false</active>
        <description>Start date can&apos;t be before today</description>
        <errorConditionFormula>DATEVALUE(Start_Date__c) &lt; today()</errorConditionFormula>
        <errorMessage>Start date can&apos;t be before today</errorMessage>
    </validationRules>
</CustomObject>